# shiboken6_demo

./: .gitignore  CMakeLists.txt  README.md
bindings/: bindings.h  bindings.xml  wrap_src_gen.py
math/: CMakeLists.txt  mathematician.cpp  mathematician.h
